assets/css/style.css
* {
    font-family: helvetica, neue lt std;
}

.jumbotron {
    background: url("http://xboxgameinfo.com/wp-content/uploads/2016/05/amazon-banner-880x320.jpg");
    background-position: center;
    padding: 8%;
    color: #ff9500;
}

.btn-primary {
    background: #2c292a;
}

.btn-primary:hover {
    background: #ff9100;
}

.answer:hover {
    border: 1px solid #2c292a;
}

.answer {
    margin: auto;
    padding: 10px;
    color: #212f3f;
    width: 50%;
}

.question {
    color: #ff9100;
}

.resetButton {
    margin-top: 10px;
}

.triviaTitle {
    margin: 0;
    font-size: 12px;
    display: inline-block;
    position: relative;
    top: 90px;
    left: 495px;
}

.jumbotron h1 {
    font-size: 40px;
    font-family: 'Satisfy', cursive;
}

.allAnswers {
    position: relative;
}

